# Vulkan_CMake

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  first_app.cpp  first_app.h  jfa_render_system.cpp  jfa_render_system.h  keyboard_move_ctrl.cpp  keyboard_move_ctrl.h  lot_buffer.cpp  lot_buffer.h  lot_camera.cpp  lot_camera.h  lot_descriptors.cpp  lot_descriptors.h  lot_device.cpp  lot_device.h  lot_frame_info.h  lot_game_object.cpp  lot_game_object.h  lot_model.cpp  lot_model.h  lot_pipeline.cpp  lot_pipeline.h  lot_renderer.cpp  lot_renderer.h  lot_swap_chain.cpp  lot_swap_chain.h  lot_texture.cpp  lot_texture.h  lot_utils.h  lot_window.cpp  lot_window.h  main.cpp  material_manager.cpp  material_manager.h  object_selection_manager.cpp  object_selection_manager.h  point_light_system.cpp  (+8 more)
01_Base_Vulkan/3dEngine/: CMakeLists.txt
02_frag_vert_Apply/: first_app.cpp  lot_pipeline.h  main.cpp
03_ResizeWindow/: lot_pipeline.cpp
03_ResizeWindow/shaders/: simple_shader.frag  simple_shader.vert
04_PushConstant/: first_app.cpp
04_PushConstant/shaders/: simple_shader.vert
05_2DTramsformation/: lot_model.h
06_RendererSystem/: README.md  lot_game_object.h  lot_swap_chain.h  simple_render_system.cpp
06_RendererSystem/shaders/: simple_shader.frag
07_Euler Angle_Homogeneous/: lot_model.h  simple_render_system.h
08_ProjectionMatrix/: lot_camera.h  lot_device.h  simple_render_system.cpp
08_ProjectionMatrix_rev/: CMakeLists.txt  lot_camera.cpp  lot_window.cpp  simple_render_system.cpp
09_CameraTransform/: first_app.cpp  lot_game_object.h  simple_render_system.cpp
10_UserInput/: README.md  first_app.cpp  first_app.h  simple_render_system.cpp
11_Index and Staging Buffers/: README.md  lot_camera.h
11_Index and Staging Buffers/shaders/: simple_shader.vert
12_AddKeyFunc/: README.md  first_app.cpp  keyboard_move_ctrl.cpp  keyboard_move_ctrl.h  lot_model.h  lot_window.h
12_Index and Staging Buffers/: first_app.cpp  keyboard_move_ctrl.cpp  keyboard_move_ctrl.h  lot_camera.cpp  lot_model.cpp
13_Quternion/: README.md  first_app.cpp  first_app.h  keyboard_move_ctrl.cpp  keyboard_move_ctrl.h  lot_camera.cpp  lot_camera.h  lot_device.cpp  lot_game_object.h  lot_model.cpp  lot_model.h  lot_renderer.h  lot_swap_chain.cpp  object_selection_manager.h  simple_render_system.cpp  simple_render_system.h
14_LoadObjFile/: CMakeLists.txt  README.md  first_app.cpp  keyboard_move_ctrl.cpp  lot_device.cpp  lot_model.cpp  lot_model.h  lot_utils.h  object_selection_manager.cpp
14_LoadObjFile/shaders/: simple_shader.frag
1_Base_Vulkan/3dEngine/: CMakeLists.txt  lot_window.cpp  lot_window.h  main.cpp
2_frag_vert_Apply/: CMakeLists.txt  READ.md  README.md  first_app.h  lot_app_base.cpp  lot_app_base.h  lot_device.h  lot_model.h  lot_pipeline.cpp  lot_swap_chain.cpp  lot_swap_chain.h  lot_window.cpp  lot_window.h
3_ResizeWindow/: README.md  first_app.cpp  lot_model.cpp
4_PushConstant/: README.md  first_app.h  lot_swap_chain.cpp
4_PushConstant/shaders/: simple_shader.frag
5_2DTramsformation/: README.md  first_app.h  lot_device.cpp
5_2DTransfomation/shaders/: first_app.cpp  lot_game_object.h  lot_pipeline.h  lot_swap_chain.h  lot_window.cpp
5_2DTransfomation/shaders/shaders/: simple_shader.vert
6_RendererSystem/: README.md  first_app.cpp  lot_renderer.cpp
7_Euler Angle_Homogeneous/: README.md  first_app.cpp  lot_renderer.h  simple_render_system.cpp
8_ProjectionMatrix/: README.md  first_app.cpp  lot_model.cpp  lot_swap_chain.cpp  lot_window.h
8_ProjectionMatrix/shaders/: simple_shader.frag
8_ProjectionMatrix_rev/: first_app.cpp  lot_renderer.cpp  lot_swap_chain.cpp  lot_window.h
9_CameraTransform/: README.md  simple_render_system.h
shaders/: fullscreen.vert  jfa.comp  jfa_outline.frag  point_light.frag  point_light.vert  selection_mask.frag  selection_mask.vert  simple_shader.frag  simple_shader.vert
